--- a/HTML/task3.html
+++ b/HTML/task3.html
@@ -5,7 +5,7 @@
     <title>Task-3</title>
 </head>
 <body>
-    <div><a href="./index.html">Back to Index Page</a></div>
+    <div><a href="../index.html">Back to Index Page</a></div>
     </br>
     </br>
     <center>
