--- a/HTML/task4.html
+++ b/HTML/task4.html
@@ -6,7 +6,7 @@
         <title>Task-4</title>
     </head>
     <body>
-        <div><a href="./index.html">Back to Index Page</a></div>
+        <div><a href="../index.html">Back to Index Page</a></div>
         <center>
             <form action="" method="get">
                 </br>
