--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </style>
 </head>
 <body>
-  <h1>Dashboard</h1>
+  <h1>Ethnus Mernstack</h1>
 
   <div class="task-section">
     <h2>HTML Tasks</h2>
