--- a/HTML/task1.html
+++ b/HTML/task1.html
@@ -6,7 +6,7 @@
     <title>Task-1</title>
 </head>
 <body>
-    <div><a href="./index.html">Back to Index Page</a></div>
+    <div><a href="../index.html">Back to Index Page</a></div>
     </br>
     </br>
     <center>
